--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Website Unblocker</h1>
     
-    <input type="text" id="urlInput" placeholder="Enter website URL" value="https://example.com">
+    <input type="text" id="urlInput" placeholder="Enter website URL" value="example.com">
     <button onclick="unblockSite()">Unblock</button>
 
     <div class="option-buttons">
@@ -45,7 +45,7 @@
         <h3>Usage</h3>
         <p>To use this tool:</p>
         <ul>
-            <li>Enter a website URL in the input field (e.g., <code>https://example.com</code>).</li>
+            <li>Enter a website URL in the input field (e.g., <code>https://example.com</code> or <code>example.com</code>).</li>
             <li>Click the "Unblock" button to open the site inside a new Blob-based tab.</li>
         </ul>
     </div>
@@ -62,6 +62,10 @@
     <script>
         function unblockSite() {
             let site = document.getElementById('urlInput').value;
+            // Automatically prepend "https://" if the URL does not include it
+            if (!site.startsWith('http://') && !site.startsWith('https://')) {
+                site = 'https://' + site;
+            }
             let blob = new Blob([`<html><body style='margin:0;padding:0;'><iframe src='${site}' width='100%' height='100%' style='border:none;'></iframe></body></html>`], { type: 'text/html' });
             let url = URL.createObjectURL(blob);
             window.open(url, '_blank');
@@ -69,6 +73,10 @@
 
         function generateDataUrl() {
             let site = document.getElementById('urlInput').value;
+            // Automatically prepend "https://" if the URL does not include it
+            if (!site.startsWith('http://') && !site.startsWith('https://')) {
+                site = 'https://' + site;
+            }
             let dataUrl = `data:text/html;charset=utf-8,<script>const u=URL.createObjectURL(new Blob([\`<html><body style='margin:0;padding:0;'><iframe src='${site}' width='100%' height='100%' style='border:none;'></iframe></body></html>\`], { type: 'text/html' }));window.location.href=u;</script>`;
             
             // Set the generated URL in the textarea
