Update entire page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
     <div id="header">
         <a href="https://github.com/Fellow-Banana" target="_blank">
-            <img id="github-logo" src="github-mark.png" alt="GitHub Logo">
+            <img id="github-logo" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
         </a>
     </div>
     <div id="container">
