--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
         #data-url-area {
             margin-top: 20px;
             width: 80%;
+            display: flex;
+            align-items: center;
         }
 
         #data-url-output {
+            flex-grow: 1;
             width: 100%;
             padding: 10px;
             border: 1px solid #333;
@@ -99,6 +102,22 @@
             resize: vertical;
             min-height: 100px;
             overflow-wrap: break-word;
+        }
+
+        #copy-data-url-button {
+            margin-left: 10px;
+            padding: 10px 20px;
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        #copy-data-url-button:hover {
+            background-color: #357ae8;
         }
 
         #disclaimer {
@@ -126,6 +145,24 @@
         #footer a:hover {
             text-decoration: underline;
         }
+
+        #copy-message {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.3s ease, transform 0.2s ease;
+            transform: translateY(20px);
+        }
+
+        #copy-message.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body>
@@ -147,6 +184,7 @@
         </div>
         <div id="data-url-area">
             <textarea id="data-url-output" readonly placeholder="Data URL will appear here"></textarea>
+            <button id="copy-data-url-button">Copy</button>
         </div>
         <div id="disclaimer">
             <strong>Disclaimer:</strong> This tool will not work on all websites. Some sites have security settings (such as <code>X-Frame-Options: DENY</code> or <code>Content-Security-Policy</code> restrictions) that prevent them from being embedded inside an iframe. Some browsers (especially mobile ones) might have additional restrictions. This tool uses iframes to display websites. This is not a perfect solution and some websites may not display correctly or at all.
@@ -154,6 +192,7 @@
         <div id="footer">
             Created by <a href="https://github.com/Fellow-Banana" target="_blank">Fellow-Banana</a>
         </div>
+        <div id="copy-message">URL Copied!</div>
     </div>
 
     <script src="script.js"></script>
